fix menu spans to align

--- a/src/components/mutual/navbar/NavBar.css
+++ b/src/components/mutual/navbar/NavBar.css
@@ -65,7 +65,7 @@ a:hover {
 
 #menuToggle input:checked ~ span {
   opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
+  transform: rotate(45deg) translate(2px, -4px);
   background: #232323;
 }
 
@@ -75,7 +75,7 @@ a:hover {
 }
 
 #menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(0, -1px);
+  transform: rotate(-45deg) translate(2px, 7px);
 }
 
 #menu {
